--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://github.com/ashim-a"><i class='bx bxl-github' ></i></a>
                 <a href="#"><i class='bx bxl-linkedin' ></i></a>
             </div>
-            <a href="#" class="btn"> Download CV</a>
+            <a href="Ashima.v (1).pdf" class="btn"> Download CV</a>
         </div>
         <div class="home-img">
             <img src="unnamed (1).jpg" alt="">
